--- a/predstavitev/slides/naslov.html
+++ b/predstavitev/slides/naslov.html
@@ -17,5 +17,5 @@
     <div>
         <small>Marko Grešak</small>
     </div>
-    <small>Mentorja: Tomaž Curk, Matrin Stražar</small>
+    <small>Mentorja: doc. dr. Tomaž Curk, Matrin Stražar</small>
 </div>
