add questions slide

--- a/predstavitev/slides/uporaba-podatkov.html
+++ b/predstavitev/slides/uporaba-podatkov.html
@@ -1,6 +1,6 @@
 <h2>Obdelava podatkov</h2>
 
-<p>Shranjevanje</p>
+<p class="fragment">Shranjevanje</p>
 <p class="fragment">Iskanje sodelovanj</p>
 <p class="fragment">Pomen sodelovanj</p>
 
