--- a/src/force-graph/force-graph-1M.html
+++ b/src/force-graph/force-graph-1M.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
   .node {
     stroke: #fff;
     stroke-width: 1.5px;
@@ -53,6 +61,15 @@
           return color(d.group);
         })
         .call(force.drag);
+
+      function updateWindow() {
+        x = w.innerWidth || e.clientWidth || g.clientWidth;
+        y = w.innerHeight || e.clientHeight || g.clientHeight;
+
+        svg.attr("width", x).attr("height", y);
+      }
+      updateWindow();
+      window.onresize = updateWindow;
 
       node.append("title")
         .text(function(d) {
