--- a/src/force-graph/force-graph.html
+++ b/src/force-graph/force-graph.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
-  html,
-  body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-
   .node {
     stroke: #fff;
     stroke-width: 1.5px;
@@ -24,8 +16,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
   <script>
     var width = 1680,
-      height = 950,
-      bodyEl = d.getElementsByTagName('body')[0];
+      height = 950;
 
     var color = d3.scale.ordinal()
       .range(['rgb(70,70,70)', 'rgb(80,130,229)', 'rgb(255,185,115)', 'rgb(255,89,103)', 'rgb(0,191,143)']);
@@ -62,15 +53,6 @@
           return color(d.group);
         })
         .call(force.drag);
-
-      function updateWindow() {
-        var x = window.innerWidth || d.documentElement.clientWidth || bodyEl.clientWidth;
-        var y = window.innerHeight || d.documentElement.clientHeight || bodyEl.clientHeight;
-
-        svg.attr("width", x).attr("height", y);
-      }
-      updateWindow();
-      window.onresize = updateWindow;
 
       node.append("title")
         .text(function(d) {
